--- a/day-07/homework/homework.html
+++ b/day-07/homework/homework.html
@@ -17,19 +17,21 @@
             <h3 class="animate__animated animate__bounceInLeft">merry  christmas</h3>
         </div>
         <div class="gif">
-            <div class="inner">
+            <div class="inner ">
                 
-                <img class="animate__animated  animate__bounceInDown" src="./fonts/download.png" alt="">
-                <img class="animate__animated animate__backInUp" src="./fonts/hop giay Giang sinh bao bi Noel (4).png" alt="">
-                <img class="animate__animated  animate__bounceInDown" src="./fonts/pngtree-christmas-theme-christmas-gift-box-illustration-christmas-png-image_3890593.png" alt=""></div>
+                <img class="animate__animated  animate__bounceInDown" src="./fonts/download.png" alt="hộp quà">
+                <img class="animate__animated animate__backInUp" src="./fonts/hop giay Giang sinh bao bi Noel (4).png" alt="hộp quà">
+                <img class="animate__animated  animate__bounceInDown" src="./fonts/pngtree-christmas-theme-christmas-gift-box-illustration-christmas-png-image_3890593.png" alt="hộp quà"></div>
             </div>
             <div class="content">
                 <h4 class="animate__animated animate__zoomInDown">Dear A.Dũng </h4>
-            <p class="animate__animated animate__zoomInUp">Chúc bạn một mùa Giáng sinh tràn ngập niềm vui. Chúc cho những ngày nghỉ lễ của bạn sẽ được trải qua trong tiếng hoan hô và những khoảnh khắc khó quên. Chúc bạn có một khoảng thời gian tuyệt vời trong Giáng sinh này!</p>
+                <p class="animate__animated animate__zoomInUp">Chúc bạn một mùa Giáng sinh tràn ngập niềm vui. Chúc cho những ngày nghỉ lễ của bạn sẽ được trải qua trong tiếng hoan hô và những khoảnh khắc khó quên. Chúc bạn có một khoảng thời gian tuyệt vời trong Giáng sinh này!</p>
+                <p class="animate__animated animate__zoomInUp">Best wishes</p>
+                <p class="animate__animated animate__zoomInUp">Xuân Anh</p>
             </div>
             <div class="img">
-                <img src="./fonts/anh-dep-ve-ong-gia-noel_121252625.png" alt="">
-                <img src="./fonts/cay-thong-noel-giang-sinh-trang-tri-dep-hinh-anh-png-661.png" alt="">
+                <img src="./fonts/anh-dep-ve-ong-gia-noel_121252625.png" alt="ong gia noel">
+                <img src="./fonts/cay-thong-noel-giang-sinh-trang-tri-dep-hinh-anh-png-661.png" alt="cây thông">
             </div>
         </div>
         <div class="snowflakes" aria-hidden="true">
